resolve gap between image rows

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
       <img class='photo' src="./images/IMG_1602.jpg">
       <img class='photo' src="./images/IMG_8743.jpg">
       <img class='photo' src="./images/IMG_1226.jpg">
+      <img class='photo' src="./images/8B44A104-6A33-4B04-9A8B-BA19C2D664AA_1_105_c.jpg">
+      <img class='photo' src="./images/IMG_8282.jpg">
+      <img class='photo' src="./images/IMG_9748.jpg">
+      <img class='photo' src="./images/IMG_9817.jpg">
+      <img class='photo' src="./images/IMG_8873.jpg">
+      <img class='photo' src="./images/IMG_1633.jpg">
     </div>
   </body>
 </html>
