--- a/album_list.html
+++ b/album_list.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animated Grid</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Yellowtail">
     <link href="./index.css" rel="stylesheet">
   </head>
   <body>
@@ -20,15 +21,22 @@
       <img class='landingphoto' src="./images/IMG_8935.jpg">
     </div>
     <div class="photogrid">
-      <img class='photo' src="./images/IMG_1602.jpg">
-      <img class='photo' src="./images/IMG_8743.jpg">
-      <img class='photo' src="./images/IMG_1226.jpg">
-      <img class='photo' src="./images/8B44A104-6A33-4B04-9A8B-BA19C2D664AA_1_105_c.jpg">
-      <img class='photo' src="./images/IMG_8282.jpg">
-      <img class='photo' src="./images/IMG_9748.jpg">
-      <img class='photo' src="./images/IMG_9817.jpg">
-      <img class='photo' src="./images/IMG_8873.jpg">
-      <img class='photo' src="./images/IMG_1633.jpg">
+      <div class="img-container">
+        <img class='photo' src="./images/IMG_1602.jpg">
+        <div class="album-text">Dubai</div>
+      </div>
+      <div class="img-container">
+        <img class='photo' src="./images/IMG_8743.jpg">
+        <div class="album-text">Abu Dhabi</div>
+      </div>
+      <div class="img-container">
+        <img class='photo' src="./images/IMG_8556.jpg">
+        <div class="album-text">Oman</div>
+      </div>
+      <div class="img-container">
+        <img class='photo' src="./images/IMG_9748.jpg">
+        <div class="album-text">Jordan</div>
+      </div>
     </div>
   </body>
 </html>
