add link tags to album

--- a/album_list.html
+++ b/album_list.html
@@ -18,25 +18,33 @@
         </ul>
     </header>
     <div class="hero">
-      <img class='landingphoto' src="./images/IMG_8935.jpg">
+      <img class='landingphoto' src="./images/map.jpeg">
     </div>
     <div class="photogrid">
-      <div class="img-container">
-        <img class='photo' src="./images/IMG_1602.jpg">
-        <div class="album-text">Dubai</div>
-      </div>
-      <div class="img-container">
-        <img class='photo' src="./images/IMG_8743.jpg">
-        <div class="album-text">Abu Dhabi</div>
-      </div>
-      <div class="img-container">
-        <img class='photo' src="./images/IMG_8556.jpg">
-        <div class="album-text">Oman</div>
-      </div>
-      <div class="img-container">
-        <img class='photo' src="./images/IMG_9748.jpg">
-        <div class="album-text">Jordan</div>
-      </div>
+      <a href="dubai.html">
+        <div class="img-container">
+          <img class='photo' src="./images/IMG_1602.jpg">
+          <div class="album-text">Dubai</div>
+        </div>
+      </a>
+      <a href="abu_dhabi.html">
+        <div class="img-container">
+          <img class='photo' src="./images/IMG_8743.jpg">
+          <div class="album-text">Abu Dhabi</div>
+        </div>
+      </a>
+      <a href="oman.html">
+        <div class="img-container">
+          <img class='photo' src="./images/IMG_8556.jpg">
+          <div class="album-text">Oman</div>
+        </div>
+      </a>
+      <a href="jordan.html">
+        <div class="img-container">
+          <img class='photo' src="./images/IMG_9748.jpg">
+          <div class="album-text">Jordan</div>
+        </div>
+      </a>
     </div>
   </body>
 </html>
