--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Animated Grid</title>
+    <title>Travel Photos</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Yellowtail">
     <link href="./index.css" rel="stylesheet">
   </head>
