--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     <title>Travel Photos</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Yellowtail">
     <link href="./index.css" rel="stylesheet">
+    <meta property="og:title" content="Adrians Travel Photography">
+    <meta property="og:description" content="Travel photography website">
+    <meta property="og:image" content="https://adrianboothphotos.s3.eu-west-2.amazonaws.com/covers/hero.jpeg">
+    <meta property="og:url" content="https://www.adrianstravelphotography.com/">
+    <meta property="og:type" content="website">
   </head>
   <body>
     <div id="root">
